--- a/Company/appsettings.json
+++ b/Company/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "cs": "Data Source=.;Initial Catalog=CompanyG2;Integrated Security=True;Encrypt=False"
+  }
 }
